--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,145 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
-}
+  
+  .btn {
+    background-color: #2e56b3;
+    color: white;
+    border: none;
+    padding: 0.8rem 1rem;
+    border-radius: 5px;
+  
+    cursor: pointer;
+    margin-top: 1rem;
+    font-family: "Poppins";
+    text-decoration: none;
+  }
+  
+  .btn-danger {
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    padding: 0.7rem 1rem;
+    border-radius: 5px;
+    margin-left: 1rem;
+    cursor: pointer;
+    margin-top: 1rem;
+  }
+  
+  .btn-netral {
+    background-color: rgba(230, 230, 230, 0.74);
+    color: black;
+  }
+  
+  .page {
+    height: 100vh;
+    max-width: 1080px;
+    margin: 0 auto;
+    padding: 0 3rem;
+  }
+  
+  .btn-link {
+    padding: 0.8rem;
+    text-decoration: none;
+    background-color: rgb(40, 103, 191);
+    color: white;
+    border-radius: 5px;
+  }
+  
+  button:active,
+  .btn:active {
+    transition: all 0.3s ease-in;
+    transform: scale(0.85);
+  }
+  
+  .navbar {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    border-bottom: 2px solid grey;
+  }
+  
+  a {
+    text-decoration: none;
+    color: black;
+  }
+  
+  .mt-2 {
+    margin-top: 1rem;
+  }
+  
+  .flex {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  .center {
+    justify-content: center;
+  }
+  
+  .between {
+    justify-content: space-between;
+  }
+  
+  .flex-col {
+    display: flex;
+    gap: 1rem;
+    justify-items: center;
+    flex-direction: column;
+  }
+  
+  .flex-1 {
+    flex: 1;
+  }
+  .border-b {
+    border-bottom: 1px solid rgb(205, 205, 205);
+  }
+  
+  .p-2 {
+    padding: 4px;
+  }
+  
+  .w-full {
+    width: 100%;
+  }
+  
+  .form-group {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  form {
+    width: 100%;
+  }
+  
+  .error {
+    color: red;
+    display: none;
+  }
+  
+  .form-group input {
+    padding: 0.8rem 0.6rem;
+    font-family: "Poppins";
+    border-radius: 5px;
+    border: 1px solid grey;
+  }
+  
+  .form-group input:user-invalid {
+    border: 1px solid rgb(255, 174, 174);
+  }
+  
+  .form-group:has(input:user-invalid) {
+    label {
+      color: red;
+    }
+  }
+  .text-center {
+    text-align: center;
+  }
